--- a/fs-client/requirements.txt
+++ b/fs-client/requirements.txt
@@ -1,1 +1,11 @@
+gevent==24.11.1
+greenlet==3.1.1
+iniconfig==2.0.0
+packaging==24.2
+pluggy==1.5.0
+pytest==8.3.4
+setuptools==75.8.0
+websocket==0.2.1
 websocket-client==1.8.0
+zope.event==5.0
+zope.interface==7.2
