--- a/.github/workflows/automated_tests.yaml
+++ b/.github/workflows/automated_tests.yaml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd .. && ls
+        cd .. && cd file-system/fs-client/
         pip install --upgrade pip  # Upgrade pip to the latest version
         pip install -r requirements.txt  # Install dependencies from requirements.txt
 
