troubleshooting auto_test workflow

--- a/.github/workflows/automated_tests.yaml
+++ b/.github/workflows/automated_tests.yaml
@@ -46,5 +46,5 @@ jobs:
     - name: Run Tests
       run: |
         ls
-        cd tests/
+        cd fs-client/tests/
         ./test.sh  # Adjust the path to your test suite as needed
