--- a/.github/workflows/automated_tests.yaml
+++ b/.github/workflows/automated_tests.yaml
@@ -46,5 +46,5 @@ jobs:
     - name: Run Tests
       run: |
         ls
-        cd fs-client/tests/
-        ./test.sh  # Adjust the path to your test suite as needed
+        cd .github/scripts/
+        ./test-script.sh  # Adjust the path to your test suite as needed
