--- a/.github/workflows/automated_tests.yaml
+++ b/.github/workflows/automated_tests.yaml
@@ -42,6 +42,7 @@ jobs:
         cd .. && cd file-system/fs-client/
         pip install --upgrade pip  # Upgrade pip to the latest version
         pip install -r requirements.txt  # Install dependencies from requirements.txt
+        pip install websocket-client
 
     - name: Run Tests
       run: |
