troubleshooting auto_test workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,4 +28,5 @@ jobs:
 
     - name: Run Ruff Lint
       run: |
+        ls && pwd
         ruff check fs-client/ --config /file-server/fs-client.pyproject.toml # Run ruff lint on the fs-client directory
